--- a/styles.css
+++ b/styles.css
@@ -89,3 +89,42 @@ img {
     color: #e5e7eb;
 }
 
+.second-container {
+    background-color: white;
+}
+
+.sub-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.information {
+    padding: 56px;
+    font-size: 36px;
+    color: #1f2937;
+    font-weight: 900;
+}
+
+.card-container {
+    display: flex;
+    gap: 50px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.card-image {
+    border: 4px solid #1f2937;
+    width: 200px;
+    height: 200px;
+    border-radius: 10px;
+}
+
+.card-text {
+    width: 200px;
+    text-align: center;
+    margin-top: 10px;
+}
+
+
+
