--- a/styles.css
+++ b/styles.css
@@ -126,5 +126,30 @@ img {
     margin-top: 10px;
 }
 
+.third-container {
+    background-color: #E5E7EB;
+    display: flex;   
+    margin-top: 56px;
+}
+
+.quote {
+    color: #1f2937;
+    font-style: italic;
+    font-weight: 300;
+    font-size: 36px;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+.quote-author {
+    align-self: flex-end;
+}
+
+.quote-container {
+    padding: 100px;
+    display: flex;
+    flex-direction: column;
+}
+
 
 
