Remove useless selector

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
     font-weight: 900;
 }
 
-.first-container, second-container {
+.first-container {
     background-color: #1f2937;
     color: #f9faf8;
 }
